--- a/index.html
+++ b/index.html
@@ -34,8 +34,14 @@
 
             <!--Contacts-->
             <ul class="contacts list">
-                <li class="item"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-                <li class="item"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+                <li class="item email"><a href="mailto:info@devstudio.com" class="link">
+                    <svg class="icon">
+                        <use href="./images/symbol-defs.svg#icon-envelope"></use>
+                    </svg>info@devstudio.com</a></li>
+                <li class="item tel"><a href="tel:+380961111111" class="link">
+                    <svg class="icon">
+                        <use href="./images/symbol-defs.svg#icon-smartphone"></use>
+                    </svg>+38 096 111 11 11</a></li>
             </ul>
         </div>
     </header>
@@ -54,18 +60,38 @@
                 <h2 class="section-title">Преимущества</h2>
                 <ul class="list">
                     <li class="item">
+                        <div class="box-icon">
+                            <svg class="icon" width="70" height="70">
+                                <use href="./images/symbol-defs.svg#icon-antenna1"></use>
+                            </svg>
+                        </div>
                         <h3>Внимание к деталям</h3>
                         <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                     </li>
                     <li class="item">
+                        <div class="box-icon">
+                            <svg class="icon" width="70" height="70">
+                                <use href="./images/symbol-defs.svg#icon-clock1"></use>
+                            </svg>
+                        </div>
                         <h3>Пунктуальность</h3>
                         <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                     </li>
                     <li class="item">
+                        <div class="box-icon">
+                            <svg class="icon" width="70" height="70">
+                                <use href="./images/symbol-defs.svg#icon-diagram1"></use>
+                            </svg>
+                        </div>
                         <h3>Планирование</h3>
                         <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                     </li>
                     <li class="item">
+                        <div class="box-icon">
+                            <svg class="icon" width="70" height="70">
+                                <use href="./images/symbol-defs.svg#icon-astronaut1"></use>
+                            </svg>
+                        </div>
                         <h3>Современные технологии</h3>
                         <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                     </li>
@@ -95,6 +121,37 @@
                         <div class="text">
                             <h3>Игорь Демьяненко</h3>
                             <p>Product Designer</p>
+                            <ul class="socialmedia">
+                                <li class="item-sm">
+                                    <a href="" class="link-sm">
+                                        <svg class="icon" width="20" height="20">
+                                            <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="item-sm">
+                                    <a href="" class="link-sm">
+                                        <svg class="icon" width="20" height="20">
+                                            <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="item-sm">
+                                    <a href="" class="link-sm">
+                                        <svg class="icon" width="20" height="20">
+                                            <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="item-sm">
+                                    <a href="" class="link-sm">
+                                        <svg class="icon" width="20" height="20">
+                                            <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
+
                         </div>
                     </li>
                     <li class="item">
@@ -102,6 +159,36 @@
                         <div class="text">
                             <h3>Ольга Репина</h3>
                             <p>Developer</p>
+                            <ul class="socialmedia">
+                                <li class="item-sm">
+                                    <a href="" class="link-sm">
+                                        <svg class="icon" width="20" height="20">
+                                            <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="item-sm">
+                                    <a href="" class="link-sm">
+                                        <svg class="icon" width="20" height="20">
+                                            <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="item-sm">
+                                    <a href="" class="link-sm">
+                                        <svg class="icon" width="20" height="20">
+                                            <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="item-sm">
+                                    <a href="" class="link-sm">
+                                        <svg class="icon" width="20" height="20">
+                                            <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="item">
@@ -109,6 +196,36 @@
                         <div class="text">
                             <h3>Николай Тарасов</h3>
                             <p>Marketing</p>
+                            <ul class="socialmedia">
+                                <li class="item-sm">
+                                    <a href="" class="link-sm">
+                                        <svg class="icon" width="20" height="20">
+                                            <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="item-sm">
+                                    <a href="" class="link-sm">
+                                        <svg class="icon" width="20" height="20">
+                                            <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="item-sm">
+                                    <a href="" class="link-sm">
+                                        <svg class="icon" width="20" height="20">
+                                            <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="item-sm">
+                                    <a href="" class="link-sm">
+                                        <svg class="icon" width="20" height="20">
+                                            <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="item">
@@ -116,7 +233,86 @@
                         <div class="text">
                             <h3>Михаил Ермаков</h3>
                             <p>UI Designer</p>
+                            <ul class="socialmedia">
+                                <li class="item-sm">
+                                    <a href="" class="link-sm">
+                                        <svg class="icon" width="20" height="20">
+                                            <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="item-sm">
+                                    <a href="" class="link-sm">
+                                        <svg class="icon" width="20" height="20">
+                                            <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="item-sm">
+                                    <a href="" class="link-sm">
+                                        <svg class="icon" width="20" height="20">
+                                            <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="item-sm">
+                                    <a href="" class="link-sm">
+                                        <svg class="icon" width="20" height="20">
+                                            <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
+                    </li>
+                </ul>
+            </div>
+        </section>
+
+        <!--Постоянные клиенты-->
+        <section class="section clients">
+            <div class="container">
+                <h2 class="section-title">Постоянные клиенты</h2>
+                <ul class="list">
+                    <li class="item">
+                        <a href="" class="link">
+                            <svg class="icon-cl" width="106" height="60">
+                                <use href="./images/symbol-defs.svg#icon-logo-cl1"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="" class="link">
+                            <svg class="icon-cl" width="106" height="60">
+                                <use href="./images/symbol-defs.svg#icon-logo-cl2"></use></svg></a>
+                    </li>
+                    <li class="item">
+                        <a href="" class="link">
+                            <svg class="icon-cl" width="106" height="60">
+                                <use href="./images/symbol-defs.svg#icon-logo-cl3"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="" class="link">
+                            <svg class="icon-cl" width="106" height="60">
+                                <use href="./images/symbol-defs.svg#icon-logo-cl4"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="" class="link">
+                            <svg class="icon-cl" width="106" height="60">
+                                <use href="./images/symbol-defs.svg#icon-logo-cl5"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="" class="link">
+                            <svg class="icon-cl" width="106" height="60">
+                                <use href="./images/symbol-defs.svg#icon-logo-cl6"></use>
+                            </svg>
+                        </a>
                     </li>
                 </ul>
             </div>
@@ -127,17 +323,55 @@
     <footer class="footer">
         <div class="container">
             <!--Company logo-->
-            <a href="./index.html" class="logo logo-white"><span class="logo-part">Web</span>Studio</a>
+            <div class="contacts-ft">
+                <a href="./index.html" class="logo logo-white"><span class="logo-part">Web</span>Studio</a>
+                
+                <!--Contacts-->
+                <address class="address">
+                    <ul class="list">
+                        <li class="item"><a href="" class="link">г. Киев, пр-т Леси Украинки, 26</a></li>
+                        <li class="item"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+                        <li class="item"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+                    </ul>
+                </address>
+            </div>
 
-            <!--Contacts-->
-            <address class="address">
-                <ul class="list">
-                    <li class="item"><a href="" class="link">г. Киев, пр-т Леси Украинки, 26</a></li>
-                    <li class="item"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-                    <li class="item"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+            <!--Social media-->
+            <div class="sm-ft">
+                <h3> ПРИСОЕДИНЯЙТЕСЬ</h3>
+                <ul class="socialmedia">
+                    <li class="item-sm">
+                        <a href="" class="link-sm">
+                            <svg class="icon" width="20" height="20">
+                                <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="item-sm">
+                        <a href="" class="link-sm">
+                            <svg class="icon" width="20" height="20">
+                                <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="item-sm">
+                        <a href="" class="link-sm">
+                            <svg class="icon" width="20" height="20">
+                                <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="item-sm">
+                        <a href="" class="link-sm">
+                            <svg class="icon" width="20" height="20">
+                                <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
                 </ul>
-            </address>
+            </div>
         </div>
+        
     </footer>
 </body>
 
