shadows .hover at portfolio page

--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
             <ul class="contacts list">
                 <li class="item email"><a href="mailto:info@devstudio.com" class="link">
                     <svg class="icon">
-                        <use href="./images/symbol-defs.svg#icon-envelope"></use>
+                        <use href="./images/icons.svg#icon-envelope"></use>
                     </svg>info@devstudio.com</a></li>
                 <li class="item tel"><a href="tel:+380961111111" class="link">
                     <svg class="icon">
-                        <use href="./images/symbol-defs.svg#icon-smartphone"></use>
+                        <use href="./images/icons.svg#icon-smartphone"></use>
                     </svg>+38 096 111 11 11</a></li>
             </ul>
         </div>
@@ -62,7 +62,7 @@
                     <li class="item">
                         <div class="box-icon">
                             <svg class="icon" width="70" height="70">
-                                <use href="./images/symbol-defs.svg#icon-antenna1"></use>
+                                <use href="./images/icons.svg#icon-antenna1"></use>
                             </svg>
                         </div>
                         <h3>Внимание к деталям</h3>
@@ -71,7 +71,7 @@
                     <li class="item">
                         <div class="box-icon">
                             <svg class="icon" width="70" height="70">
-                                <use href="./images/symbol-defs.svg#icon-clock1"></use>
+                                <use href="./images/icons.svg#icon-clock1"></use>
                             </svg>
                         </div>
                         <h3>Пунктуальность</h3>
@@ -80,7 +80,7 @@
                     <li class="item">
                         <div class="box-icon">
                             <svg class="icon" width="70" height="70">
-                                <use href="./images/symbol-defs.svg#icon-diagram1"></use>
+                                <use href="./images/icons.svg#icon-diagram1"></use>
                             </svg>
                         </div>
                         <h3>Планирование</h3>
@@ -89,7 +89,7 @@
                     <li class="item">
                         <div class="box-icon">
                             <svg class="icon" width="70" height="70">
-                                <use href="./images/symbol-defs.svg#icon-astronaut1"></use>
+                                <use href="./images/icons.svg#icon-astronaut1"></use>
                             </svg>
                         </div>
                         <h3>Современные технологии</h3>
@@ -125,28 +125,28 @@
                                 <li class="item-sm">
                                     <a href="" class="link-sm">
                                         <svg class="icon" width="20" height="20">
-                                            <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                                            <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="item-sm">
                                     <a href="" class="link-sm">
                                         <svg class="icon" width="20" height="20">
-                                            <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                                            <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="item-sm">
                                     <a href="" class="link-sm">
                                         <svg class="icon" width="20" height="20">
-                                            <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                                            <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="item-sm">
                                     <a href="" class="link-sm">
                                         <svg class="icon" width="20" height="20">
-                                            <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -163,28 +163,28 @@
                                 <li class="item-sm">
                                     <a href="" class="link-sm">
                                         <svg class="icon" width="20" height="20">
-                                            <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                                            <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="item-sm">
                                     <a href="" class="link-sm">
                                         <svg class="icon" width="20" height="20">
-                                            <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                                            <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="item-sm">
                                     <a href="" class="link-sm">
                                         <svg class="icon" width="20" height="20">
-                                            <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                                            <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="item-sm">
                                     <a href="" class="link-sm">
                                         <svg class="icon" width="20" height="20">
-                                            <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -200,28 +200,28 @@
                                 <li class="item-sm">
                                     <a href="" class="link-sm">
                                         <svg class="icon" width="20" height="20">
-                                            <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                                            <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="item-sm">
                                     <a href="" class="link-sm">
                                         <svg class="icon" width="20" height="20">
-                                            <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                                            <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="item-sm">
                                     <a href="" class="link-sm">
                                         <svg class="icon" width="20" height="20">
-                                            <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                                            <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="item-sm">
                                     <a href="" class="link-sm">
                                         <svg class="icon" width="20" height="20">
-                                            <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -237,28 +237,28 @@
                                 <li class="item-sm">
                                     <a href="" class="link-sm">
                                         <svg class="icon" width="20" height="20">
-                                            <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                                            <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="item-sm">
                                     <a href="" class="link-sm">
                                         <svg class="icon" width="20" height="20">
-                                            <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                                            <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="item-sm">
                                     <a href="" class="link-sm">
                                         <svg class="icon" width="20" height="20">
-                                            <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                                            <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="item-sm">
                                     <a href="" class="link-sm">
                                         <svg class="icon" width="20" height="20">
-                                            <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -277,40 +277,40 @@
                     <li class="item">
                         <a href="" class="link">
                             <svg class="icon-cl" width="106" height="60">
-                                <use href="./images/symbol-defs.svg#icon-logo-cl1"></use>
+                                <use href="./images/icons.svg#icon-logo-cl1"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="item">
                         <a href="" class="link">
                             <svg class="icon-cl" width="106" height="60">
-                                <use href="./images/symbol-defs.svg#icon-logo-cl2"></use></svg></a>
+                                <use href="./images/icons.svg#icon-logo-cl2"></use></svg></a>
                     </li>
                     <li class="item">
                         <a href="" class="link">
                             <svg class="icon-cl" width="106" height="60">
-                                <use href="./images/symbol-defs.svg#icon-logo-cl3"></use>
+                                <use href="./images/icons.svg#icon-logo-cl3"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="item">
                         <a href="" class="link">
                             <svg class="icon-cl" width="106" height="60">
-                                <use href="./images/symbol-defs.svg#icon-logo-cl4"></use>
+                                <use href="./images/icons.svg#icon-logo-cl4"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="item">
                         <a href="" class="link">
                             <svg class="icon-cl" width="106" height="60">
-                                <use href="./images/symbol-defs.svg#icon-logo-cl5"></use>
+                                <use href="./images/icons.svg#icon-logo-cl5"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="item">
                         <a href="" class="link">
                             <svg class="icon-cl" width="106" height="60">
-                                <use href="./images/symbol-defs.svg#icon-logo-cl6"></use>
+                                <use href="./images/icons.svg#icon-logo-cl6"></use>
                             </svg>
                         </a>
                     </li>
@@ -343,28 +343,28 @@
                     <li class="item-sm">
                         <a href="" class="link-sm">
                             <svg class="icon" width="20" height="20">
-                                <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                                <use href="./images/icons.svg#icon-instagram"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="item-sm">
                         <a href="" class="link-sm">
                             <svg class="icon" width="20" height="20">
-                                <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                                <use href="./images/icons.svg#icon-twitter"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="item-sm">
                         <a href="" class="link-sm">
                             <svg class="icon" width="20" height="20">
-                                <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                                <use href="./images/icons.svg#icon-facebook"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="item-sm">
                         <a href="" class="link-sm">
                             <svg class="icon" width="20" height="20">
-                                <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                                <use href="./images/icons.svg#icon-linkedin"></use>
                             </svg>
                         </a>
                     </li>
