--- a/portfolio.html
+++ b/portfolio.html
@@ -67,60 +67,76 @@
                           
                     </li>
                     <li class="item">
-                        <img src="./images/imgprtf2.jpg" alt="два баскетболиста с мячом" width="370">
-                        <div class="text">
-                            <h3>Постер New Orleans vs Golden Star</h3>
-                            <p>Дизайн</p>
-                        </div>
+                        <a href="" class="link">
+                            <img src="./images/imgprtf2.jpg" alt="два баскетболиста с мячом" width="370">
+                            <div class="text">
+                                <h3>Постер New Orleans vs Golden Star</h3>
+                                <p>Дизайн</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="item">
-                        <img src="./images/imgprtf3.jpg" alt="лого ресторана Seafood" width="370">
-                        <div class="text">
-                            <h3>Ресторан Sea Food</h3>
-                            <p>Приложение</p>
-                        </div>
+                        <a href="" class="link">
+                            <img src="./images/imgprtf3.jpg" alt="лого ресторана Seafood" width="370">
+                            <div class="text">
+                                <h3>Ресторан Sea Food</h3>
+                                <p>Приложение</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="item">
-                        <img src="./images/imgprtf4.jpg" alt="наушники" width="370">
-                        <div class="text">
-                            <h3>Проект Prime</h3>
-                            <p>Маркетинг</p>
-                        </div>
+                        <a href="" class="link">
+                            <img src="./images/imgprtf4.jpg" alt="наушники" width="370">
+                            <div class="text">
+                                <h3>Проект Prime</h3>
+                                <p>Маркетинг</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="item">
-                        <img src="./images/imgprtf5.jpg" alt="коробки" width="370">
-                        <div class="text">
-                            <h3>Проект Boxes</h3>
-                            <p>Приложение</p>
-                        </div>
+                        <a href="" class="link">
+                            <img src="./images/imgprtf5.jpg" alt="коробки" width="370">
+                            <div class="text">
+                                <h3>Проект Boxes</h3>
+                                <p>Приложение</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="item">
-                        <img src="./images/imgprtf6.jpg" alt="монитор" width="370">
-                        <div class="text">
-                            <h3>Inspiration has no Borders</h3>
-                            <p>Веб-сайт</p>
-                        </div>
+                        <a href="" class="link">
+                            <img src="./images/imgprtf6.jpg" alt="монитор" width="370">
+                            <div class="text">
+                                <h3>Inspiration has no Borders</h3>
+                                <p>Веб-сайт</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="item">
-                        <img src="./images/imgprtf7.jpg" alt="открытый журнал" width="370">
-                        <div class="text">
-                            <h3>Издание Limited Edition</h3>
-                            <p>Веб-сайт</p>
-                        </div>
+                        <a href="" class="link">
+                            <img src="./images/imgprtf7.jpg" alt="открытый журнал" width="370">
+                            <div class="text">
+                                <h3>Издание Limited Edition</h3>
+                                <p>Веб-сайт</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="item">
-                        <img src="./images/imgprtf8.jpg" alt="этикетка" width="370">
-                        <div class="text">
-                            <h3>Проект Lab</h3>
-                            <p>Маркетинг</p>
-                        </div>
+                        <a href="" class="link">
+                            <img src="./images/imgprtf8.jpg" alt="этикетка" width="370">
+                            <div class="text">
+                                <h3>Проект Lab</h3>
+                                <p>Маркетинг</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="item">
-                        <img src="./images/imgprtf9.jpg" alt="ноутбук">
-                        <div class="text">
-                            <h3>Growing Business</h3>
-                            <p>Приложение</p>
-                        </div>
+                        <a href="" class="link">
+                            <img src="./images/imgprtf9.jpg" alt="ноутбук">
+                            <div class="text">
+                                <h3>Growing Business</h3>
+                                <p>Приложение</p>
+                            </div>
+                        </a>
                     </li>
                 </ul>
             </div>
