align items contacts

--- a/portfolio.html
+++ b/portfolio.html
@@ -22,8 +22,8 @@
     
                 <!--Menu-->
                 <ul class="list">
-                    <li class="item"><a href="./index.html" class="link current">Студия</a></li>
-                    <li class="item"><a href="./portfolio.html" class="link">Потрфолио</a></li>
+                    <li class="item"><a href="./index.html" class="link">Студия</a></li>
+                    <li class="item"><a href="./portfolio.html" class="link current">Потрфолио</a></li>
                     <li class="item"><a href="#" class="link">Контакты</a></li>
                 </ul>
             </nav>
